Update responsiveness, fonts, and text

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <h1>Will you be my girlfriend for life? 💖</h1>
       <div class="proposal-buttons">
         <button id="btn-yes" onclick="handleYesClick()">YES 💘</button>
-        <button id="btn-no" onmouseover="moveNoButton()" onclick="moveNoButton()" ontouchstart="moveNoButton()">NO
+        <button id="btn-no" onmouseover="moveNoButton()" onclick="moveNoButton()" ontouchstart="moveNoButton(event)">NO
           💔</button>
       </div>
     </div>
